--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8.4.38",
-    "prettier": "3.3.2",
+    "prettier": "^3.3.2",
     "sass": "^1.77.5",
     "vite": "^5.2.13"
   }
