--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "vite build",
     "lint": "eslint \"src/**/*.js\"",
+    "lint-fix": "eslint \"src/**/*.js\" --fix",
     "serve": "vite preview",
     "start": "vite"
   },
