reset vite, checking for build errors

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "author": "The Freight Capsone Team (https://github.com/orgs/freight-capstone/people) && The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
-    "build": "env-cmd -f ./.env vite build",
+    "build": "vite build",
     "lint": "eslint \"src/**/*.js\"",
     "lint-fix": "eslint \"src/**/*.js\" --fix",
     "serve": "vite preview",
@@ -59,6 +59,6 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
-    "vite": "^5.2.13"
+    "vite": "^5.4.8"
   }
 }
