--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,8 @@
         "laravel-vite-plugin": "^1.0",
         "prettier": "^3.3.3",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "js-cookie": "^3.0.5"
     }
 }
