--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,8 @@
     "core-js": "^3.37.1",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
+    "mammoth": "^1.8.0",
+    "pdfjs-dist": "^4.8.69",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
