--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,10 @@
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "prettier": "^3.3.3",
-        "vite": "^5.0"
+        "vite": "^6.2.1"
     },
     "dependencies": {
-        "js-cookie": "^3.0.5"
+        "js-cookie": "^3.0.5",
+        "mammoth": "^1.9.0"
     }
 }
