install docx-preview

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
         "vite": "^6.2.1"
     },
     "dependencies": {
+        "docx-preview": "^0.3.4",
         "js-cookie": "^3.0.5",
         "mammoth": "^1.9.0"
     }
