--- a/client/package.json
+++ b/client/package.json
@@ -37,15 +37,19 @@
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
+    "docx-preview": "^0.3.4",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
+    "lodash.pick": "^3.1.0",
     "mammoth": "^1.8.0",
-    "pdfjs-dist": "^4.8.69",
+    "pdfjs-dist": "^5.0.375",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-doc-viewer": "^0.1.14",
+    "react-dom": "^19.0.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^7.4.0",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.5"
   },
@@ -53,14 +57,14 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
-    "vite": "^5.4.8"
+    "vite": "^6.2.1"
   }
 }
