--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "classnames": "^2.5.1",
