--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:jSreu4jWwQZuwtbo2ya6KiEq2QjTAeDu5iISI2ZIqiA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://hr4.axleshift.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hr4
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=hr4_master
+DB_USERNAME=hr4_hraxles3
+DB_PASSWORD=4do32bpgswixo2wb
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
