--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
