--- a/server/composer.json
+++ b/server/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
+        "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.9",
         "league/flysystem": "^3.29"
     },
