--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
